--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "code-edit",
   "author": "stagas",
   "short": "stagas/code-edit",
-  "description": "lightweight code editor custom element with syntax highlighting",
+  "description": "Lightweight code editor Web Component with syntax highlighting",
   "version": "1.0.0",
   "license": "MIT",
   "repository": {
@@ -26,69 +26,96 @@
     }
   },
   "files": [
-    "dist"
+    "dist",
+    "!**/*.tsbuildinfo"
   ],
   "scripts": {
-    "build": "npm run clean && npm run build:cjs && npm run build:esm && echo done.",
-    "docs": "documentation readme src --resolve=node --pe ts --re ts --re d.ts --github --section=API --markdown-toc-max-depth=3 --config=documentation.yml",
-    "docs:site": "npm run docs -- --readme-file site/pages/index.md",
-    "test": "echo ok",
-    "test:web": "web-test-runner",
-    "cov": "jest --coverage",
-    "playground": "vite --force --cors --clearScreen=false --open /playground/",
-    "lint": "eslint src && prettier --check src",
-    "build:watch": "npm run build:cjs:watch & npm run build:esm:watch",
-    "docs:watch": "onchange -i src --await-write-finish 400 -- npm run docs",
-    "test:watch": "jest --watchAll",
+    "start:web": "vite-open example/web.ts",
+    "start:node": "onchange -i src example -- swcno example/node.ts",
+    "build:watch": "tsc -p tsconfig.dist.json --outDir dist/types --watch & swc -w -C module.type=commonjs ./src -d dist/cjs -w & swc -w -C module.type=es6 ./src -d dist/esm",
+    "build:dist": "npm run build:bundle && npm run build:min",
     "cov:watch": "jest --coverage --watchAll",
-    "bench:watch": "fpick benchmark --repeat -- onchange -i src 'benchmark/**/*.{js,jsx,ts,tsx}' --await-write-finish 400 --kill -- node -r esbuild-register",
-    "example:watch": "fpick example --repeat -- onchange -i src example --await-write-finish 400 --kill -- node -r esbuild-register",
-    "build:cjs": "tsc -p tsconfig.cjs.json",
-    "build:cjs:watch": "tsc -p tsconfig.cjs.json --watch",
-    "build:esm": "tsc -p tsconfig.esm.json && echo '{\"type\":\"module\"}' >dist/esm/package.json",
-    "build:esm:watch": "tsc -p tsconfig.esm.json --watch",
-    "build:min": "esbuild src/index.ts --bundle --format=esm | terser --compress --module --mangle -o code-edit.min.js",
-    "lint:fix": "eslint --fix src && prettier --write src",
     "clean": "rimraf dist",
-    "prepack": "npm run build",
+    "docs": "dokio -o README.md && dprint fmt README.md",
+    "test": "npm run test:node && npm run test:web",
+    "test:node": "if find test -type f -iregex '.*\\.spec\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then jest; else echo no node tests; fi",
+    "test:web": "if find test -type f -iregex '.*\\.spec\\.web\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then web-test-runner; else echo no web tests; fi",
+    "cov": "jest --coverage",
+    "build": "npm run build:cjs & npm run build:esm & npm run build:types && echo done.",
+    "build:cjs": "swc -C module.type=commonjs ./src -d dist/cjs",
+    "build:esm": "swc -C module.type=es6 ./src -d dist/esm && echo '{\"type\":\"module\"}' >dist/esm/package.json",
+    "build:types": "tsc -p tsconfig.dist.json --outDir dist/types",
+    "build:bundle": "bunzee src/index.ts \"dist/$(cat package.json | jq -r '.name').js\"",
+    "build:min": "bunzee -m src/index.ts \"dist/$(cat package.json | jq -r '.name').min.js\"",
+    "start:web:https": "vite-open --https example/web.ts",
+    "lint": "eslint src && dprint check",
+    "lint:fix": "eslint --fix src && dprint fmt",
+    "prepack": "npm run clean && npm run build && (npm run build:dist || echo unable to bundle)",
     "prepack:dry": "npm pack --dry-run",
+    "prepush": "npm run lint && npm run test",
     "prepare": "husky install"
   },
   "devDependencies": {
-    "@stagas/documentation-fork": "^13.2.5",
-    "@stagas/sucrase-jest-plugin": "^2.2.0-fork",
-    "@swc-node/jest": "^1.4.3",
-    "@tsconfig/node16": "^1.0.2",
-    "@types/jest": "^27.0.3",
-    "@types/node": "^17.0.4",
-    "@typescript-eslint/eslint-plugin": "^5.8.0",
-    "@typescript-eslint/parser": "^5.8.0",
-    "@web/dev-server-esbuild": "^0.2.16",
-    "@web/test-runner": "^0.13.23",
-    "esbuild": "^0.14.8",
-    "esbuild-register": "^3.2.1",
-    "eslint": "^8.5.0",
-    "eslint-plugin-import": "^2.25.3",
+    "@n1kk/intspector": "1.0.2",
+    "@stagas/jest-node-exports-resolver": "1.1.5-require-basedir-2",
+    "@swc-node/jest": "1.4.3",
+    "@swc/cli": "0.1.57",
+    "@swc/core": "1.2.164",
+    "@tsconfig/node16": "1.0.2",
+    "@types/jest": "27.4.1",
+    "@types/node": "17.0.23",
+    "@typescript-eslint/eslint-plugin": "5.18.0",
+    "@typescript-eslint/parser": "5.18.0",
+    "@web/test-runner": "0.13.27",
+    "bunzee": "^0.0.1",
+    "chokidar": "3.5.3",
+    "dprint": "0.24.4",
+    "eslint": "8.13.0",
+    "eslint-config-html-jsx": "1.0.0",
+    "eslint-plugin-import": "2.26.0",
     "eslint-plugin-react": "^7.28.0",
     "fpick": "^1.1.0",
-    "husky": "^7.0.4",
-    "jest": "^27.4.5",
-    "jest-browser-globals": "^25.1.0-beta",
-    "onchange": "^7.1.0",
+    "husky": "7.0.4",
+    "jest": "27.5.1",
+    "jest-browser-globals": "25.1.0-beta",
+    "onchange": "7.1.0",
     "plenty-themes": "^1.0.0",
-    "prettier": "^2.5.1",
-    "rimraf": "^3.0.2",
+    "pull-configs": "^0.2.0",
+    "rimraf": "3.0.2",
     "scoped-registries": "^0.2.0",
-    "terser": "^5.10.0",
-    "ts-jest": "^27.1.2",
-    "ts-node": "^10.4.0",
-    "typescript": "^4.5.4",
-    "vite": "^2.7.6"
+    "swcno": "0.1.1",
+    "ts-jest": "27.1.4",
+    "ts-node": "10.7.0",
+    "typescript": "4.6.3",
+    "vite": "^2.7.6",
+    "vite-open": "^1.6.2",
+    "wtr-plugin-vite": "^0.0.1"
   },
   "dependencies": {
-    "code-syntax": "^1.0.0",
-    "debounce-micro": "^1.0.0",
-    "super-impose": "^1.0.0",
-    "textarea-code": "^1.0.1"
-  }
+    "code-syntax": "2.0.0",
+    "debounce-micro": "^2.0.0",
+    "mixter": "0.3.0",
+    "super-impose": "2.0.0",
+    "textarea-code": "2.0.0"
+  },
+  "trustedDependencies": [
+    "@stagas/jest-node-exports-resolver",
+    "argtor",
+    "bunzee",
+    "code-syntax",
+    "decarg",
+    "fluent-event",
+    "fluent-flags",
+    "html-jsx",
+    "html-vdom",
+    "mixter",
+    "nested-css",
+    "plenty-themes",
+    "pull-configs",
+    "super-impose",
+    "textarea-code",
+    "vite-open",
+    "wtr-plugin-vite"
+  ],
+  "types": "./dist/types/index.d.ts"
 }
