--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,33 +1,46 @@
 {
   "extends": "@tsconfig/node16/tsconfig.json",
-  "include": [
-    "playground",
-    "benchmark",
-    "example",
-    "src"
-  ],
-  "ts-node": {
-    "files": true
-  },
   "watchOptions": {
     "watchFile": "priorityPollingInterval",
     "watchDirectory": "dynamicPriorityPolling"
   },
+  "ts-node": {
+    "files": true
+  },
+  "include": [
+    "example",
+    "src",
+    "test",
+    "types"
+  ],
+  "exclude": [
+    "node_modules",
+    "dist"
+  ],
   "compilerOptions": {
+    "outDir": "dist/cjs",
     "lib": [
-      "dom"
+      "DOM",
+      "DOM.Iterable",
+      "ESNext"
     ],
-    "outDir": "dist",
+    "emitDeclarationOnly": true,
     "moduleResolution": "node",
+    "useDefineForClassFields": true,
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
+    "resolveJsonModule": true,
+    "isolatedModules": true,
+    "inlineSources": true,
     "declaration": true,
+    "skipDefaultLibCheck": true,
+    "skipLibCheck": true,
     "sourceMap": true,
+    "allowJs": true,
+    "incremental": true,
     "module": "commonjs",
     "target": "esnext",
-    "jsx": "react",
-    "jsxFactory": "h",
-    "jsxFragmentFactory": "Fragment",
+    "jsx": "preserve",
     "strict": true
   }
 }
