--- a/package.json
+++ b/package.json
@@ -62,8 +62,10 @@
     "@swc/cli": "0.1.57",
     "@swc/core": "1.2.164",
     "@tsconfig/node16": "1.0.2",
+    "@types/audioworklet": "0.0.26",
     "@types/jest": "27.4.1",
     "@types/node": "17.0.23",
+    "@types/webmidi": "2.0.6",
     "@typescript-eslint/eslint-plugin": "5.18.0",
     "@typescript-eslint/parser": "5.18.0",
     "@web/test-runner": "0.13.27",
@@ -92,11 +94,11 @@
     "wtr-plugin-vite": "^0.0.1"
   },
   "dependencies": {
-    "code-syntax": "2.0.0",
+    "code-syntax": "^2.0.1",
     "debounce-micro": "^2.0.0",
-    "mixter": "0.3.0",
-    "super-impose": "2.0.0",
-    "textarea-code": "2.0.0"
+    "mixter": "^0.3.1",
+    "super-impose": "^2.0.1",
+    "textarea-code": "^2.0.1"
   },
   "trustedDependencies": [
     "@stagas/jest-node-exports-resolver",
