--- a/package.json
+++ b/package.json
@@ -30,17 +30,15 @@
     "!**/*.tsbuildinfo"
   ],
   "scripts": {
-    "start:web": "vite-open example/web --https",
-    "start:web:debugging": "vite-open example/web --https --debugging-this",
+    "start:web": "devito example/web",
+    "start:web:debugging": "devito example/web --debugging-this",
     "start:node": "onchange -i src example -- swcno example/node.ts",
     "build:watch": "fastpm autolink && tsc -p tsconfig.dist.json --outDir dist/types --watch & swc -w -C module.type=commonjs ./src -d dist/cjs -w & swc -w -C module.type=es6 ./src -d dist/esm",
     "build:dist": "npm run build:bundle && npm run build:min",
     "cov:watch": "utr --coverage --watch",
     "clean": "rimraf dist",
     "docs": "dokio -o README.md && dprint fmt README.md",
-    "test": "npm run test:node && npm run test:web",
-    "test:node": "if find test -type f -iregex '.*\\.spec\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then utr 'test/*.spec.{js,jsx,ts,tsx}'; else echo no node tests; fi",
-    "test:web": "if find test -type f -iregex '.*\\.spec\\.web\\.\\(js\\|jsx\\|ts\\|tsx\\)$' | grep -q .; then utr --browser 'test/*.spec.web.{js,jsx,ts,tsx}'; else echo no web tests; fi",
+    "test": "utr",
     "cov": "utr --coverage",
     "build": "npm run build:cjs & npm run build:esm & npm run build:types && echo done.",
     "build:cjs": "swc -C module.type=commonjs ./src -d dist/cjs",
@@ -60,39 +58,39 @@
     "@swc/cli": "0.1.57",
     "@swc/core": "1.2.218",
     "@tsconfig/node16": "1.0.3",
-    "@types/audioworklet": "0.0.29",
+    "@types/audioworklet": "0.0.30",
     "@types/jest": "27.5.2",
     "@types/node": "17.0.45",
     "@types/webmidi": "2.0.6",
-    "@typescript-eslint/eslint-plugin": "5.30.7",
-    "@typescript-eslint/parser": "5.30.7",
+    "@typescript-eslint/eslint-plugin": "5.31.0",
+    "@typescript-eslint/parser": "5.31.0",
     "bunzee": "^1.0.0",
-    "dokio": "^0.0.2",
+    "chokidar": "3.5.3",
+    "devito": "^2.0.0",
+    "dokio": "^1.1.0",
     "dprint": "0.30.3",
     "eslint": "8.20.0",
     "eslint-config-html-jsx": "^1.0.0",
     "eslint-plugin-import": "2.26.0",
-    "eslint-plugin-react": "7.30.0",
+    "eslint-plugin-react": "7.30.1",
     "fpick": "^1.1.0",
     "husky": "7.0.4",
     "onchange": "7.1.0",
-    "plenty-themes": "^1.0.0",
-    "pull-configs": "^0.2.0",
+    "plenty-themes": "^1.1.1",
+    "pull-configs": "^1.0.0",
     "rimraf": "3.0.2",
     "scoped-registries": "^0.2.0",
     "swcno": "0.1.1",
     "typescript": "4.7.3",
-    "utr": "^0.2.0",
-    "vite": "^2.7.6",
-    "vite-open": "^3.0.1"
+    "utr": "^1.3.1"
   },
   "dependencies": {
     "code-syntax": "^4.0.0",
     "get-element-offset": "^1.0.1",
     "relative-mouse": "^1.0.1",
-    "sigl": "^1.0.0",
+    "sigl": "^1.0.2",
     "super-impose": "^4.0.0",
-    "textarea-code": "^4.0.0"
+    "textarea-code": "^4.0.1"
   },
   "types": "./dist/types/index.d.ts"
 }
